# emendas_parlamentares

./: .gitignore  README.md  pyproject.toml
code/extract/legislatures/: extract_deputy_details.py  extract_deputy_history.py  extract_legislatures.py  extract_legislatures_details.py
code/extract/municipalities/: extract_municipalities.py
code/load/: load.py  load_tst.py
code/load/legislatures/: load_legislatures.py
code/load/municipalities/: load_municipalities.py
data/raw/deputy_details/: deputy_details.parquet
data/raw/deputy_history/: deputy_history.parquet
data/raw/legislature_details/: legislature_details.parquet
data/raw/legislatures/: legislatures.parquet
data/raw/municipalities/: municipalities.parquet
notebooks/test/: deputies.ipynb  history.ipynb  legislatures.ipynb  municipalities.ipynb
